# django_homework_2

./: .flake8  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/fixture/: category_data.json  contact_data.json  product_data.json
catalog/management/commands/: input_data.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at_and_more.py  0004_alter_product_category.py  0005_contact.py
catalog/templates/catalog/: base.html  contacts.html  index.html  product_create.html  product_detail.html
catalog/templates/catalog/includes/: inc_feedback.html  inc_main_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
