[tool.poetry]
name = "django-homework-2"
version = "0.1.0"
description = ""
authors = ["Kirill8769 <tkkrozn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
ipython = "^8.22.2"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
isort = "^5.13.2"

[tool.isort]
line_length = 119


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
